# risc0-ipfs

./: .gitignore  LICENSE  README.md  docker  dockerfile
ipfs-content-proof/: Cargo.toml  template.env
ipfs-content-proof/ipfs_core/: Cargo.toml
ipfs-content-proof/ipfs_core/src/: ipfsmessages.rs  lib.rs  protobuff.rs
ipfs-content-proof/ipfs_host/: Cargo.toml
ipfs-content-proof/ipfs_host/proto_messages/: Cargo.toml  build.rs  old_messages.proto
ipfs-content-proof/ipfs_host/proto_messages/src/: lib.rs  messages.proto
ipfs-content-proof/ipfs_host/src/: functions.rs  lib.rs  prototransform.rs  v0_proof.rs  v1_proof.rs
ipfs-content-proof/methods/guest/: Cargo.toml
ipfs-content-proof/src/: Cargo.toml  main.rs
ipfs-content-proof/src/proving/: mod.rs  session_manager.rs
