[package]
name = "ipfs_core"
version = "0.1.0"
edition = "2021"

# default-run = "ecdsa-example"

[dependencies]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
serde = { version = "1.0", features = ["derive"] }
#risc0-zkvm = {  version = "0.18.0" }
[build-dependencies]

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }