[package]
name = "ipfs_host"
version = "0.1.0"
edition = "2021"

# default-run = "ecdsa-example"

[dependencies]
rust-ipfs = { git = "https://github.com/dariusc93/rust-ipfs.git" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
serde_cbor = "0.10"
http = "0.2.0" 
ipfs-api-backend-hyper = "0.6"
ipfs_messages = { path = "./proto_messages" }
ipfs_core = { path = "../ipfs_core" }
futures = "0.3"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
bs58 = "0.5.0"
hex-slice = "0.1.4"
prost = "0.12"
prost-derive = "0.12"
prost-types = "0.12"
bytes = "1.0"
async-recursion = "1.0.0"
base32 = "0.4.0"
[build-dependencies]
prost-build = { version = "0.12" }